# universal-silabs-flasher

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements_test.txt  setup.cfg
.github/workflows/: ci.yml  pypi.yml
pyscript/: Makefile  aiosignal-1.2.0-py3-none-any.whl  index.html  install_dependencies.py  multidict-4.7.6-py3-none-any.whl  universal_silabs_flasher-0.0.4-py3-none-any.whl  webserial_transport.py
tests/: test_common.py  test_firmware.py  test_flash.py  test_spinel.py
tests/firmwares/: skyconnect_zigbee_ncp_7.4.4.0.gbl
universal_silabs_flasher/: __init__.py  __main__.py  common.py  const.py  cpc.py  cpc_types.py  emberznet.py  firmware.py  flash.py  flasher.py  gbl.py  gecko_bootloader.py  gpio.py  probe.py  spinel.py  spinel_types.py  xmodemcrc.py
web/: index.html  package-lock.json  package.json  rollup.config.js  tsconfig.json  web-dev-server.config.mjs
web/assets/: bellows-0.34.3-py3-none-any.whl  multidict-6.0.2-py3-none-any.whl  universal_silabs_flasher-0.0.8-py3-none-any.whl  webserial_transport.py
web/assets/manifests/: skyconnect.json
web/assets/wheels/: aiohttp-3.8.3-py3-none-any.whl  bellows-0.35.0.dev0-py3-none-any.whl  frozenlist-1.3.1-py3-none-any.whl  pure_pcapy3-1.0.1-py3-none-any.whl  yarl-1.8.1-py3-none-any.whl
web/src/: const.ts  dummy_module_loader.py  firmware-selector.ts  flashing-dialog.ts  flashing-form.ts  global.d.ts  index.ts  mwc-file-upload.ts  nabucasa-zigbee-flasher.ts  pyodide-loader.ts  pyodide-loading-dialog.ts  setup-pyodide.ts  universal-silabs-flasher.ts  usf-file-upload.ts  usf-icon.ts  utils.ts
web/src/dialogs/: connect-dialog.ts  firmware-selector.ts  pyodide-loader.ts
