[metadata]
name = universal-silabs-flasher
description = Tool to flash firmware onto any Silicon Labs radio running EmberZNet, CPC multi-PAN, or just a bare Gecko Bootloader
version = attr: universal_silabs_flasher.__version__
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/puddly/universal-silabs-flasher/
author = Puddly
author_email = puddly3@gmail.com
license = GPL-3.0

[options]
packages = find:
python_requires = >=3.8
install_requires =
    click
    zigpy
    bellows>=0.34.3
    gpiod
    coloredlogs
    async_timeout
    awesomeversion

[options.entry_points]
console_scripts =
    universal-silabs-flasher = universal_silabs_flasher.__main__:main

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
testing =
    pytest>=7.1.2
    pytest-asyncio>=0.19.0
    pytest-timeout>=2.1.0
    pytest-mock>=3.8.2
    pytest-cov>=3.0.0
    pytest-github-actions-annotate-failures
